--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,33 +1,28 @@
 .App {
   /* text-align: left; */
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  /* background-color:#CEC6C6; */
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+ 
+  
+  /* display: f;
+  flex-direction: column; */
+  /* height:100%; */
   /* align-items: center;
   justify-content: center; */
-  font-size: calc(10px + 2vmin);
-  color: white;
+  
+
 }
 
 .App-link {
   color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-body{
+  /* margin: 5px 50px 5px 50px; 
+  display:flex;
+  flex-direction:row; */
+  /* background-color:#CEC6C6;*/
 }
+
+
