--- a/client/src/component/navBar/navBar.css
+++ b/client/src/component/navBar/navBar.css
@@ -1,4 +1,48 @@
 .navigation-menu{
-    display:grid;
-    background-color: red;
+    margin: 0px 0px 5px 0px; 
+    padding:0px;
+    list-style:none;
+}
+.navigation-menu a{
+    text-decoration:none;
+    color:Black;
+    font-family: 'Times New Roman', Times, serif;
+    font-size:1.5vw;
+    font-variant: small-caps;
+    /* padding:10px 20px; */
+    /* display:inline-block;
+    position:relative;
+    transition-duration:0.6s; */
+  }
+.navigation-menu a:hover{
+    background-color: rgb(226, 168, 93)
+}
+ul{
+    margin-left:0;
+    margin-right:0;
+    margin-top:0;
+    margin-left:0;
+    /* background-color:rgb(190, 145, 85); */
+}
+.navigation-menu li{
+    list-style: none;
+    display:inline-block;
+
+    
+}
+#navbar-left{
+    float: left;
+    
+}
+#navbar-right{
+    float: right;
+}
+.navigation-menu{
+ /* font-size: calc(10px + 2vmin);  */
+  margin:0px,0px,0px,0px;
+  color: white;
+  height:400px;
+  background-image: url("background.png"); 
+  background-size: cover;
+ 
 }
