--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,11 @@
 body {
-  margin: 0;
-  padding: 0;
-  background-color:rgb(57, 62, 71);
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  margin:0px;
+  background-color:#CEC6C6;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 code {
