--- a/client/src/component/register/camera.css
+++ b/client/src/component/register/camera.css
@@ -1,5 +1,6 @@
 .card{
     box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.2);
+    border:1px solid white;
     /* background-color:#999292; */
     border-radius:5px;
     max-height:450px;
@@ -8,10 +9,30 @@
 	margin-top: 50px;
 }
 #button-cap{
+    border:none;
+    padding: 12px 16px;
+    cursor: pointer;
+    border-radius:50%;
+    margin-left:100px;
+    margin-right:100px;
+    border: 1px solid white;
+    box-shadow: 0 5px #999;
     
-    position: relative;
+    /* position: relative;
     background:transparent;
     outline:none;
-    font-size:28px;
+    font-size:28px; */
     
 }
+#button-cap:active {
+    background-color: grey;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+.icon{
+    padding: 0px;
+    font-size: 16px;
+    color: black;
+    text-align: center;
+}
+
