attendance sheet started

--- a/client/src/component/register/register.css
+++ b/client/src/component/register/register.css
@@ -1,15 +1,7 @@
 .column{
-    display:grid;
-    padding:5px,5px,5px,5px;
-    grid-template-columns:repeat(2,auto); 
-    /* box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);  */
-    
-}
-.container{
-    width: 97%;
- margin-right: 50%; 
- height: 100%;
-     
+    display:flex;
+    flex-direction: column;
+    box-sizing:border-box;
 }
 
 .box-container{
