--- a/client/src/component/register/UserDetails.css
+++ b/client/src/component/register/UserDetails.css
@@ -1,9 +1,8 @@
 
 .screen{
     margin-right:50px;
+    margin-left:100px;
     margin-top:50px;
-    /* height:150%; */
-    /* position: relative; */
     background-color:#3e3e3e;
     border-radius: 15px;
     border:1px solid white;
@@ -13,8 +12,9 @@
     Form ko Tauko
 =====================*/
 .screen-header{
-    display: grid;
-  grid-template-rows:0.2,auto;
+    /* display: grid; */
+  /* grid-template-rows:0.2,auto; */
+  margin-top:20px;
   background-color: #4d4d4f;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
@@ -25,29 +25,17 @@
   Form ko Slim body
 =========================*/
 .screen-body{
-    display:grid;
-    width:100%;
-    height:90%;
+  /* display:flex; */
+    /* width:100%; */
+    padding-left: 60px;
+    padding-right: 60px;
     position: relative;
-    /* grid-template-columns:repeat(2,auto); */
     background-color: white;
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-
+    /* height:100%; */
 }
 
-/* .modal {
-    width: 100%;
-    max-width: 100vw;
-    height: 80vh;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    overflow: hidden;
-    background-color: white;
-    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.3);
-  } */
 
 /*=====================
     Form ko breast
@@ -55,19 +43,10 @@
   .modal-design {
     width: 40%;
     height: 90%;
-    position: absolute;
   }
   .round-shape {
-    /* border:1px solid black; */
     width: 150%;
     height: 150%;
-    /* width: 150%;
-    height: 150%;
-    position:relative;
-    transform:translate(-40%,-10%); */
-    position: absolute;
-    /* top: 50%; */
-    /* left: 38%; */
     transform: translate(-40%, -10%);
     border-radius: 50%;
     background-color: #cdb196;
@@ -78,24 +57,13 @@
       The Form begins
 ==========================================*/
 .form-body{
-    margin-left:40%;
+    /* margin-left:40%; */
     margin-right:0;
     margin-top:0;
     width: 59%;
     height: 100%;
-    position: absolute;
-    /* border:1px solid black; */
+    /* position: absolute; */
   }
-  /* .form-details{
-    width: 90%;
-    height: 85%;
-    position: absolute;
-    top: 50%;
-    left: 5%;
-    transform: translate(0%, -50%);
-
-  } */
-
 .input-field{
     display:grid;
     margin:2vh auto;
