--- a/client/src/component/register/camera.css
+++ b/client/src/component/register/camera.css
@@ -1,27 +1,31 @@
+.camera{
+    width:40%;
+    height:80%;
+}
 .card{
     box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.2);
     border:1px solid white;
     /* background-color:#999292; */
     border-radius:5px;
-    max-height:450px;
-    max-width:450px;
+    width:350px;
+    height:350px;
+    max-height:350px;
+    max-width:550px;
 	margin-left: 50px;
 	margin-top: 50px;
 }
 #button-cap{
+    position: relative;
+    
     border:none;
     padding: 12px 16px;
     cursor: pointer;
     border-radius:50%;
-    margin-left:100px;
+    margin-left:180px;
     margin-right:100px;
+    margin-top:-10px;
     border: 1px solid white;
     box-shadow: 0 5px #999;
-    
-    /* position: relative;
-    background:transparent;
-    outline:none;
-    font-size:28px; */
     
 }
 #button-cap:active {
