--- a/client/src/component/attendance-sheet/adminNavbar.css
+++ b/client/src/component/attendance-sheet/adminNavbar.css
@@ -1,6 +1,10 @@
 .topnav {
   overflow: hidden;
-  background-color: #00688B;
+  background-color: rgba(70,130,180,0.9);
+  position: fixed;
+  width: 100%;
+  height: 8%;
+  
 }
 
 .topnav a {
@@ -10,6 +14,7 @@
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  
 }
 
   .navbar-contents{
