--- a/client/src/component/attendance-sheet/attendance.css
+++ b/client/src/component/attendance-sheet/attendance.css
@@ -9,7 +9,7 @@
 ===========================================*/
 .sidebar{
     background-color:#3c3c3c;
-    width:20%;
+    width:17%;
     min-height:100vh;
    
 }
@@ -17,9 +17,20 @@
     background-color:#282828;
     min-height:30vh;
 }
+.column{
+    padding-top: 60px;
+}
+.faace{
+    width: 60px;
+    height: 60px;
+}
+.toptext{
+    color: white;
+    margin-left: 10%;
+}
 .search-container{
     text-align: center;
-    padding-top: 100px;
+    /* padding-top: 80px; */
     
 }
 .search-bar{
@@ -28,11 +39,12 @@
     border-radius: 6px;
     background-color: #505050;
     border: none;
+    width: 90%;
 }
 .main-button{
     width: 100%;
     border: none;
-    margin-top: 20%;
+    margin-top: 10%;
     color: white;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -49,16 +61,7 @@
     text-align: left;
   padding-left: 25px;
 }
-.sidebar-top{
-    width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: transparent;
-    border: transparent;
-    color: white;
-    text-align: left;
-    padding-left: 25px;
-}
+
 .sidebar-button:hover {
     background-color: #505050;
     color:white;
@@ -84,10 +87,16 @@
     text-align: left;
   padding-left: 25px;
   }
-
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
   .dropdown-content {
     display: none;
-    z-index: 1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+   width: 100%;
   }
   
   .dropdown-content a {
@@ -96,15 +105,16 @@
     text-decoration: none;
     display: block;
   }
-
   
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  .dropdown:hover .dropbtn {color: white;}
+  .show{
+      display:block;
+  }
 
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {
-    background-color: #505050;
-    width: 100%;
-}
 .sidebar-ul{
     padding-inline-start: 0px;
     padding-inline-end: 0px;
@@ -113,10 +123,7 @@
 /*=======================================
         Sheet.css
 ======================================*/
-.sheet-wrapper{
-    width:100%;
-    grid-area:sheet; 
-}
+
 .sheet{
     display:flex;
     flex-direction: column;
@@ -129,14 +136,29 @@
     background:pink;
    
 }
+.navline{
+    margin-top:5%;
+}
+.row{
+   float: left;  
+   margin-top: 10%; 
+}
+
+.tulogo{
+      width: 20%;
+      height: 20%;
+      float: left;
+}
 .box{
-   float: left;
-    margin-top: 50px;
+    box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.2);
+    border:1px solid white;
+    float: left;
+    margin-top: 1%;
     margin-left: 30px;
-    height: 18%;
+    height: 17%;
     background-color: #5F9EA0;
     text-align: left;
-    width: 255px;
+    width: 240px;
     color: white;
 }
 .boax{
@@ -145,34 +167,42 @@
    background-color: #00868B;
    border: none;
    padding-bottom: 5%;
+   margin-top: 15%;
 }
 .m-box{
+    box-shadow: 2px 4px 4px 2px rgba(0, 0, 0, 0.2);
+    border:1px solid white;
     float: left;
     margin-top: 50px;
     margin-left: 30px;
    height: 350px;
-    background-color: #A8A8A8;
+    background-color: #f5f5f5;
     text-align: center;
     width: 60%;
 }
+.chart{
+    margin-top: 0%;
+    height: 40vh;
+    float: left;
+}
 .box-button{
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 50%;
+    padding-top: 5px;
+    padding-bottom: 5px;
     background-color: transparent;
     border: transparent;
+    color: gray;
 }
 .box-button:hover{
     background-color: #505050;
 }
 
 .box-button1{
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    width: 50%;
+    padding-top: 5px;
+    padding-bottom: 5px;
     background-color: transparent;
     border: transparent;
-    color: white;
 }
 .box-button1:hover{
     background-color: #505050;
@@ -182,8 +212,8 @@
     margin-top: 50px;
     margin-left: 40px;
    height: 350px;
-    background-color: #787878;
+    background-color: #f5f5f5;
     text-align: center;
-    width: 30%;
+    width: 33%;
 }
 
