--- a/client/src/component/attendance-sheet/attendance.css
+++ b/client/src/component/attendance-sheet/attendance.css
@@ -17,9 +17,10 @@
 ===========================================*/
 .sidebar{
     background-color:#3c3c3c;
-    width:20%;
+    width:17%;
     min-height:100vh;
-   
+    border: 1px solid white;
+    box-shadow: 0 5px #999;
 }
 .sidebar-header{
     background-color:#282828;
@@ -119,10 +120,10 @@
 /*=======================================
         Sheet.css
 ======================================*/
-.sheet-wrapper{
+/* .sheet-wrapper{
     width:100%;
     grid-area:sheet; 
-}
+} */
 .sheet{
     display:flex;
     flex-direction: column;
